# Difforum

./: .comfyignore  .gitattributes  .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  REALTIME.md  __init__.py  pyproject.toml  requirements.txt
core/: __init__.py  audio.py  camera.py  camera_presets.py  color.py  effects.py  expr.py  look.py  models.py  plot.py  profiles.py  prompt.py  schedule.py  symmetry.py  video.py  warp.py
examples/: PROMPTS.md  _build_examples.py  _guide_demo.py  _smoke_live.py  _smoke_render.py  _smoke_render_169.py  _smoke_render_extras.py  _smoke_render_kaleido.py  _smoke_render_promo.py  _smoke_render_pt.py  _smoke_render_sdxl.py  _validate_workflows.py  difforum_animatediff_sd15.json  difforum_audio_reactive.json  difforum_audio_reactive_video.json  difforum_camera_warp.json  difforum_deluxe_travel_controlnet_video.json  difforum_feedback_classic.json  difforum_hybrid_wan_guides.json  difforum_intuitive_controls.json  difforum_ipadapter_coherent.json  difforum_mesmerize_kaleidoscope.json  difforum_models_info.json  difforum_qrcode_illusion.json  difforum_realtime_live.json  difforum_schedule_basic.json  difforum_turbo_live.json  difforum_vj_footage.json
nodes/: audio_nodes.py  catalog_nodes.py  effects_nodes.py  guide_nodes.py  hybrid_nodes.py  live_nodes.py  look_nodes.py  prompt_nodes.py  sampler_nodes.py  schedule_nodes.py  video_nodes.py  warp_nodes.py
tests/: test_audio.py  test_color.py  test_core.py  test_effects.py  test_hybrid.py  test_integration.py  test_look.py  test_models.py  test_plot.py  test_prompt.py  (+2 more)
